Bug 447689 - top latte panel ignores OnAllVirtualDesktops after startup
Summary: top latte panel ignores OnAllVirtualDesktops after startup
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.6
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-30 11:14 UTC by Andy3153
Modified: 2022-01-01 19:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.7
Sentry Crash Report:


Attachments
Video showing the bug (27 bytes, text/plain)
2021-12-30 11:18 UTC, Andy3153
Details
attachment-22784-0.html (1.15 KB, text/html)
2022-01-01 19:18 UTC, Michail Vourlakos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy3153 2021-12-30 11:14:17 UTC
SUMMARY
On launch, one of my Latte panels doesn't move along with the change of the virtual desktop, while the other two do.

STEPS TO REPRODUCE
1. Launch Latte Dock 
2. Attempt to switch virtual desktops

OBSERVED RESULT
One of the panels remains on the virtual desktop that Latte Dock was first launched on.

EXPECTED RESULT
All Latte docks should move along with the virtual desktop since they are, well, docks.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.4
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
To make that panel move normally on other virtual desktops, I have to interact with a widget on it first.

Info about the video:
1. I first close the currently running Latte Dock instance
2. I launch Latte Dock again
3. I show how the top panel doesn't move along with the other panels when I switch workspaces
4. I interact with a widget on the panel 
5. I show how it fixes the problem after I do that
 
I tried removing absolutely everything that has to do with Latte Dock (cache, configs) and re-making the entire layout. It did not fix things.

(Also present in the video is the fact that "Hide background when not needed" is not working all the time, but that's another issue I might report a bug on.)
Comment 1 Andy3153 2021-12-30 11:18:10 UTC
Created attachment 144958 [details]
Video showing the bug
Comment 2 Michail Vourlakos 2021-12-30 11:53:11 UTC
The video does not open and I dont understand what you mean by moving
Comment 3 Michail Vourlakos 2021-12-30 17:56:23 UTC
Ok I show it... 
Please send also your latte layout to test it in my system.
Comment 4 Andy3153 2021-12-30 19:51:54 UTC
(In reply to Michail Vourlakos from comment #3)
> Ok I show it... 
> Please send also your latte layout to test it in my system.

If by sending the layout you mean sending you a backup of it, here it is

https://pastebin.com/7hzuMRRr
Comment 5 Michail Vourlakos 2021-12-30 20:13:31 UTC
Does not open, what I need is,

Right click dock, Layouts, Edit Layouts..., choose your layout, Export...,Export as template
Comment 6 Andy3153 2021-12-30 21:47:27 UTC
(In reply to Michail Vourlakos from comment #5)
> Does not open, what I need is,
> 
> Right click dock, Layouts, Edit Layouts..., choose your layout,
> Export...,Export as template

Oh, export as template, okay, I did export as backup. Also Pastebin doesn't seem to work..?

https://textdoc.co/uBpjwRqPZg9GI2xm
Comment 7 Michail Vourlakos 2021-12-31 10:16:17 UTC
unfortunately this is not reproducable in my system...
Are you sure this is not an issue with VirtualDesktopBar applet?

you can try to remove it and check afterwards if it still happens in your system
Comment 8 Andy3153 2021-12-31 16:08:11 UTC
(In reply to Michail Vourlakos from comment #7)
> unfortunately this is not reproducable in my system...
> Are you sure this is not an issue with VirtualDesktopBar applet?
> 
> you can try to remove it and check afterwards if it still happens in your
> system

How could that applet cause the problem when, firstly, it's not on the panel that has the problem, and secondly, the top dock remains on the virtual desktop Latte Dock has been opened on regardless of the method used to switch virtual desktops (either the widget or just KWin keyboard shortcuts)?
Comment 9 Michail Vourlakos 2021-12-31 16:19:07 UTC
You can try to remove the widget and check results.
Without a proper way to reproduce in my system, such issues can not be easily fixed.
Comment 10 Andy3153 2022-01-01 00:59:40 UTC
(In reply to Michail Vourlakos from comment #9)
> You can try to remove the widget and check results.
> Without a proper way to reproduce in my system, such issues can not be
> easily fixed.

I just tried to remove the widget. Didn't do much.

https://imgur.com/a/kfyO9Wh
Comment 11 Michail Vourlakos 2022-01-01 19:05:32 UTC
Git commit 1c6e60a8f4690722f8fa0038dd648fa78f2d7669 by Michail Vourlakos.
Committed on 01/01/2022 at 19:03.
Pushed by mvourlakos into branch 'v0.10'.

view:enable OnAllDesktops during creation

--try to avoid corner cases that wm ignores OnAllDesktops
flag for specific views during startup. This patch should
protect these corner cases.
FIXED-IN:0.10.7

M  +12   -2    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/1c6e60a8f4690722f8fa0038dd648fa78f2d7669
Comment 12 Michail Vourlakos 2022-01-01 19:06:37 UTC
Git commit 765aa45c72079b798018cc11ef77380264159b31 by Michail Vourlakos.
Committed on 01/01/2022 at 19:06.
Pushed by mvourlakos into branch 'master'.

view:enable OnAllDesktops during creation

--try to avoid corner cases that wm ignores OnAllDesktops
flag for specific views during startup. This patch should
protect these corner cases.
FIXED-IN:0.10.7

M  +12   -2    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/765aa45c72079b798018cc11ef77380264159b31
Comment 13 Michail Vourlakos 2022-01-01 19:08:07 UTC
feel free to test the patch
Comment 14 Andy3153 2022-01-01 19:16:56 UTC
(In reply to Michail Vourlakos from comment #13)
> feel free to test the patch

Oh, sure! Could you please tell me how though? Is installing latte-dock-git from the AUR enough? Or do I need to manually clone the git repo and build it?
Comment 15 Michail Vourlakos 2022-01-01 19:18:15 UTC
Created attachment 145021 [details]
attachment-22784-0.html

best way to be sure is to clone the git repo and build.... either master
branch or v0.10 branch or you can wait for 0.10.7 to be released in a week.

Στις Σάβ 1 Ιαν 2022 στις 9:16 μ.μ., ο/η Andy3153 <bugzilla_noreply@kde.org>
έγραψε:

> https://bugs.kde.org/show_bug.cgi?id=447689
>
> --- Comment #14 from Andy3153 <andy3153@protonmail.com> ---
> (In reply to Michail Vourlakos from comment #13)
> > feel free to test the patch
>
> Oh, sure! Could you please tell me how though? Is installing latte-dock-git
> from the AUR enough? Or do I need to manually clone the git repo and build
> it?
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.